Set local PKG_CONFIG_PATH
BUG=https://github.com/ibus/ibus/issues/2556

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -52,6 +52,7 @@ AM_VALAFLAGS = \
     --pkg=ibus-1.0 \
     --pkg=config \
     --pkg=xi \
+    --pkg-config="\"$(PKG_CONFIG) --with-path=$(PKG_CONFIG_PATH)\"" \
     --target-glib="$(VALA_TARGET_GLIB_VERSION)" \
     $(NULL)
 
