--- a/configure.ac
+++ b/configure.ac
@@ -233,7 +233,7 @@ AC_ARG_ENABLE(gtk4,
     AS_HELP_STRING([--enable-gtk4],
                    [Build gtk4 im module]),
     [enable_gtk4=$enableval],
-    [enable_gtk4=no]
+    [enable_gtk4=yes]
 )
 AM_CONDITIONAL([ENABLE_GTK4], [test x"$enable_gtk4" = x"yes"])
 
@@ -276,8 +276,7 @@ if test x"$enable_gtk2" = x"yes"; then
 
     gtk2_binary_version=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
     GTK2_IM_MODULEDIR="$libdir"/gtk-2.0/$gtk2_binary_version/immodules
-else
-    enable_gtk2="no (disabled, use --enable-gtk2 to enable)"
+    enable_gtk2="yes (enabled, use --disable-gtk2 to disable)"
 fi
 
 if test x"$enable_gtk3" = x"yes"; then
@@ -297,7 +296,6 @@ if test x"$enable_gtk3" = x"yes"; then
     gtk3_binary_version=`$PKG_CONFIG --variable=gtk_binary_version gtk+-3.0`
     GTK3_IM_MODULEDIR="$libdir"/gtk-3.0/$gtk3_binary_version/immodules
 else
-    enable_gtk3="no (disabled, use --enable-gtk3 to enable)"
     enable_gdk3_wayland=no
 fi
 if test x"$enable_gdk3_wayland" != x"yes"; then
@@ -313,8 +311,7 @@ if test x"$enable_gtk4" = x"yes"; then
 
     gtk4_binary_version=`$PKG_CONFIG --variable=gtk_binary_version gtk4`
     GTK4_IM_MODULEDIR="$libdir"/gtk-4.0/$gtk4_binary_version/immodules
-else
-    enable_gtk4="no (disabled, use --enable-gtk4 to enable)"
+    enable_gtk4="yes (enabled, use --disable-gtk4 to disable)"
 fi
 
 if test x"$enable_xim" = x"yes"; then
@@ -331,8 +328,10 @@ if test x"$enable_xim" = x"yes"; then
             gtk+-2.0
         ])
     fi
-else
-    enable_xim="no (disabled, use --enable-xim to enable)"
+    enable_xim="yes (enabled, use --disable-xim to disable)"
+fi
+if test x"$enable_gtk3" = x"yes"; then
+    enable_gtk3="yes (enabled, use --disable-gtk3 to disable)"
 fi
 
 if $PKG_CONFIG --exists x11; then
@@ -363,8 +362,9 @@ if test x"$enable_wayland" = x"yes"; then
               AC_SUBST(WAYLAND_PRTCLS_SUBDIR)
               WAYLAND_SCANNER_RULES(['$(datadir)/$(WAYLAND_PRTCLS_SUBDIR)'])],
              [AC_SUBST(wayland_scanner_rules)])
+    enable_wayland="yes (enabled, use --disable-wayland to disable)"
 else
-    enable_wayland="no (disabled, use --enable-wayland to enable)"
+    wayland_scanner_rules="./wayland-scanner.mk"
     AC_SUBST(wayland_scanner_rules)
 fi
 
