--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,7 @@ jobs:
            libglib2.0-dev
            libgtk-3-bin
            libgtk-3-dev
+           libgtk-4-dev
            libgtk2.0-dev
            libnotify-dev
            libtool
