tools: Fix ibus start/restart in Plasma Wayland
ibus start/restart frequently failed because of the timeout.
Now the command waits for the "/VirtualKeyboard" on
"org.kde.kwin.VirtualKeyboard" D-Bus ack signal so that the "/kwinrc" on
"org.kde.kconfig.notify" D-Bus signal is completed.

Also use ibusinternal.h instead of dbus.h .

Fixes: https://github.com/ibus/ibus/commit/74712fa

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -45,20 +45,19 @@ AM_CPPFLAGS = \
     $(NULL)
 
 AM_CFLAGS = \
-    @DBUS_CFLAGS@ \
     @GLIB2_CFLAGS@ \
     @GIO2_CFLAGS@ \
     @GTHREAD2_CFLAGS@ \
     -DG_LOG_DOMAIN=\"IBUS\" \
     -DLIBEXECDIR=\"$(libexecdir)\" \
     -DIBUS_DISABLE_DEPRECATED \
+    -DIBUS_COMPILATION \
     -Wno-unused-variable \
     -Wno-unused-but-set-variable \
     -Wno-unused-function \
     $(NULL)
 
 AM_LDADD = \
-    @DBUS_LIBS@ \
     @GOBJECT2_LIBS@ \
     @GLIB2_LIBS@ \
     @GIO2_LIBS@ \
