github/workflows: Update action/checkout version
Node 16 has reached its end of life and Node.js 20 is available.
rf. https://github.blog/changelog/2023-09-22-github-actions-transitioning-from-node-16-to-node-20/

BUG=https://github.com/ibus/ibus/pull/2628

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
            libnotify-devel
            libtool
            python3-devel
-           python3-gobject
+           python3-gobject-devel
            systemd
            unicode-emoji
            unicode-ucd
@@ -156,7 +156,7 @@ jobs:
           echo $GITHUB_WORKSPACE
           ls -a
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           #repository: ibus/ibus
           fetch-depth: 200
