Fix Flatpak build for dnf and pyoverridesdir
`dnf` is not available during Flatpak builds with `flatpak-builder` and
the steps are omitted in autogen.sh to check FLATPAK_ID environment
variable.

When IBus is built with the Json files in test directory, the build
tries to install IBus.py file into pyoverridesdir likes
/usr/lib*/python3.12/site-packages/gi/overrides

But the directory is readonly with `flatpak-builder` and could be
failed.
Now `--disable-pygobject` option is added to `configure`.

IBus modules are embedded in Flatpak platforms likes GNOME, Freedesktop
and this issue might not happen in the platform builds since
the pyoverridesdir does not exist yet so this might fix the build
issues with Json files only in test directory.

--- a/configure.ac
+++ b/configure.ac
@@ -509,9 +509,20 @@ AM_CONDITIONAL([ENABLE_DAEMON], [true])
 
 PYGOBJECT_REQUIRED=3.0.0
 
-PKG_CHECK_EXISTS([pygobject-3.0 >= $PYGOBJECT_REQUIRED],
-                 [enable_pygobject=yes], [enable_pygobject=no])
+# When IBus is built with the Json files in test directory, the build
+# tries to install IBus.py file into pyoverridesdir
+# but the directory is readonly with `flatpak-builder`
+AC_ARG_ENABLE(pygobject,
+    AS_HELP_STRING([--disable-pygobject],
+                   [Disable pygobject.]),
+    [enable_pygobject=$enableval],
+    [enable_pygobject=yes]
+)
 
+if test "x$enable_pygobject" = "xyes"; then
+    PKG_CHECK_EXISTS([pygobject-3.0 >= $PYGOBJECT_REQUIRED],
+                     [enable_pygobject=yes], [enable_pygobject=no])
+fi
 if test "x$enable_pygobject" = "xyes"; then
     PKG_CHECK_MODULES(PYTHON, [pygobject-3.0 >= $PYGOBJECT_REQUIRED])
 
