--- a/configure.ac
+++ b/configure.ac
@@ -27,8 +27,8 @@ m4_define([ibus_released], [0])
 
 m4_define([ibus_major_version], [1])
 m4_define([ibus_minor_version], [5])
-m4_define([ibus_micro_version], [30])
-m4_define([ibus_beta_version], [rc3])
+m4_define([ibus_micro_version], [31])
+m4_define([ibus_beta_version], [beta1])
 m4_define([ibus_abi_current], [5])
 m4_define([ibus_abi_revision],
           [m4_eval(100 * ibus_minor_version + ibus_micro_version)])
