bus: use va_marshaller to avoid GValue boxing
Building your own marshaller list is most of the way there to get better
signal performance, but you can go a bit further by having it generate
va_marshallers and set those too.

Not only do va_marshallers allow you to avoid the GValue boxing, it allows
you to also get better profiling data at runtime.

BUG=https://github.com/ibus/ibus/pull/2683

--- a/bus/Makefile.am
+++ b/bus/Makefile.am
@@ -99,12 +99,12 @@ BUILT_SOURCES =             \
 
 # gen marshal
 marshalers.h: marshalers.list
-	$(AM_V_GEN) $(GLIB_GENMARSHAL) --prefix=bus_marshal $(srcdir)/marshalers.list --header --internal > $@.tmp && \
+	$(AM_V_GEN) $(GLIB_GENMARSHAL) --prefix=bus_marshal $(srcdir)/marshalers.list --header --internal --valist-marshallers > $@.tmp && \
 	mv $@.tmp $@
 
 marshalers.c: marshalers.h marshalers.list
 	$(AM_V_GEN) (echo "#include \"marshalers.h\""; \
-	$(GLIB_GENMARSHAL) --prefix=bus_marshal $(srcdir)/marshalers.list --body --internal) > $@.tmp && \
+	$(GLIB_GENMARSHAL) --prefix=bus_marshal $(srcdir)/marshalers.list --body --internal --valist-marshallers) > $@.tmp && \
 	mv $@.tmp $@
 
 if ENABLE_EMOJI_DICT
