--- a/engine/simple.xml.in
+++ b/engine/simple.xml.in
@@ -3,7 +3,7 @@
     <name>org.freedesktop.IBus.Simple</name>
     <description>A table based simple engine</description>
     <exec>@libexecdir@/ibus-engine-simple</exec>
-    <version>1.5.32-rc1.20250227</version>
+    <version>1.5.33-beta1.20250916</version>
     <author>Peng Huang &lt;shawn.p.huang@gmail.com&gt;</author>
     <license>GPL</license>
     <homepage>https://github.com/ibus/ibus/wiki</homepage>
@@ -8337,18 +8337,6 @@
             <rank>1</rank>
         </engine>
         <engine>
-            <name>xkb:jp:kana86:jpn</name>
-            <language>ja</language>
-            <license>GPL</license>
-            <author>Peng Huang &lt;shawn.p.huang@gmail.com&gt;</author>
-            <layout>jp</layout>
-            <layout_variant>kana86</layout_variant>
-            <longname>Japanese (Kana 86)</longname>
-            <description>Japanese (Kana 86)</description>
-            <icon>ibus-keyboard</icon>
-            <rank>1</rank>
-        </engine>
-        <engine>
             <name>xkb:jp:OADG109A:jpn</name>
             <language>ja</language>
             <license>GPL</license>
@@ -10693,6 +10681,18 @@
             <layout_variant>svdvorak</layout_variant>
             <longname>Swedish (Svdvorak)</longname>
             <description>Swedish (Svdvorak)</description>
+            <icon>ibus-keyboard</icon>
+            <rank>1</rank>
+        </engine>
+        <engine>
+            <name>xkb:se:colemak:swe</name>
+            <language>sv</language>
+            <license>GPL</license>
+            <author>Peng Huang &lt;shawn.p.huang@gmail.com&gt;</author>
+            <layout>se</layout>
+            <layout_variant>colemak</layout_variant>
+            <longname>Swedish (Colemak)</longname>
+            <description>Swedish (Colemak)</description>
             <icon>ibus-keyboard</icon>
             <rank>1</rank>
         </engine>
